<resources>
    <string name="app_name">Black_Stanton_BOCES</string>

    <string name="title_activity_student_login_select_teacher">StudentLoginSelectTeacher</string>
    <string name="title_activity_student_login_select_student">StudentLoginSelectStudent</string>
    <string name="title_activity_student_login_select_task">StudentLoginSelectTask</string>
    <string name="title_activity_student_current_task_view">StudentCurrentTaskViewActivity</string>
    <string name="title_activity_admin_login">AdminLoginActivity</string>
    <string name="title_activity_admin_menu">AdminMenuActivity</string>
    <string name="title_activity_admin_student">AdminStudentActivity</string>
    <string name="title_activity_admin_teachers">AdminTeachersActivity</string>
    <string name="title_activity_admin_tasks">AdminTasksActivity</string>
    <string name="title_activity_admin_add_student">AdminAddStudentActivity</string>
    <string name="title_activity_admin_edit_student">AdminEditStudentActivity</string>
    <string name="title_activity_admin_add_teacher">AdminAddTeacherActivity</string>
    <string name="title_activity_admin_edit_teacher">AdminEditTeacherActivity</string>
    <string name="title_activity_admin_add_task">AdminAddTaskActivity</string>
    <string name="title_activity_admin_edit_task">AdminEditTaskActivity</string>
    <string name="title_activity_admin_manage_accounts">AdminManageAccounts</string>

    <!--activity_login_type-->
    <string name="title_login">Welcome to BOCES</string>
    <string name="btn_login_student">Student Login</string>
    <string name="btn_login_admin">Admin Login</string>
    <string name="btn_qr">QR</string>


    <!--activity_student_login_select_teacher-->
    <string name="title_select_teacher">Select Teacher</string>
    <string name="search_hint_type_teacher_name">Type Teacher Name</string>
    <string name="btn_select_teacher_next">Next</string>
    <string name="btn_select_teacher_back">Back</string>

    <!--activity_student_login_select_student-->
    <string name="title_select_student">Select Student</string>
    <string name="search_hint_type_student_name">Type Student Name</string>
    <string name="btn_select_student_next">Next</string>
    <string name="btn_select_student_back">Back</string>

    <!--activity_student_login_select_task-->
    <string name="title_select_task">Select Task</string>
    <string name="search_hint_type_task_name">Type Task Name</string>
    <string name="btn_select_task_next">Next</string>
    <string name="btn_select_task_back">Back</string>

    <!--activity_student_current_start_view-->
    <string name="lbl_start_student">Student Name</string>
    <string name="title_start_prompt">Ready?</string>
    <string name="lbl_start_task">Current Task</string>
    <string name="btn_start_login">Log In as Different Student</string>
    <string name="btn_start_back">Back</string>
    <string name="btn_start">START!</string>

    <!--activity_student_current_task_view-->
    <string name="lbl_current_student">Student Name</string>
    <string name="title_current_prompt">Go Do Your Task!</string>
    <string name="lbl_current_task">Current Task</string>
    <string name="btn_login">Log In as Different Student</string>
    <string name="btn_done">DONE!</string>


    <!--activity_admin_login-->
    <string name="title_admin_login">Admin Login</string>
    <string name="hint_username">User Name</string>
    <string name="hint_password">Password</string>
    <string name="btn_admin_login">Log In</string>
    <string name="btn_admin_login_back">Back</string>


    <!--activity_admin_menu-->
    <string name="title_admin_menu"> Admin Menu </string>
    <string name="btn_admin_students">Students</string>
    <string name="btn_admin_teachers">Teachers</string>
    <string name="btn_admin_tasks">Tasks</string>
    <string name="btn_admin_time_clocked">Time Clocked</string>
    <string name="btn_admin_reports">Reports</string>
    <string name="btn_admin_accounts">Admin Accounts</string>

    <!--activity_admin_students-->
    <string name="title_admin_students">Students</string>
    <string name="search_hint_admin_type_student_name">Type Student Name</string>
    <string name="btn_admin_students_edit">Edit Student</string>
    <string name="btn_admin_students_add">Add Student</string>
    <string name="btn_admin_students_back">Back</string>


    <!--activity_admin_add_students-->
    <string name="title_add_students">Add Student</string>
    <string name="btn_add_students_picture">Picture</string>
    <string name="btn_add_students_save">Save</string>
    <string name="btn_add_students_back">Back</string>
    <string name="btn_add_students_hint_first">First</string>
    <string name="btn_add_students_hint_last">Last</string>
    <string name="btn_add_students_hint_age">Age</string>
    <string name="btn_add_students_hint_teacher">Teacher</string>
    <string name="btn_add_students_hint_year">Year</string>

    <!--activity_admin_edit_students-->
    <string name="title_edit_students">Edit Student</string>
    <string name="btn_edit_students_picture">Picture</string>
    <string name="btn_edit_students_save">Save</string>
    <string name="btn_edit_students_back">Back</string>
    <string name="btn_edit_students_hint_first">First</string>
    <string name="btn_edit_students_hint_last">Last</string>
    <string name="btn_edit_students_hint_age">Age</string>
    <string name="btn_edit_students_hint_teacher">Teacher</string>
    <string name="btn_edit_students_hint_year">Year</string>

    <!--activity_admin_teachers-->
    <string name="title_admin_teachers">Teachers</string>
    <string name="search_hint_admin_type_teacher_name">Type Teacher Name</string>
    <string name="btn_admin_teachers_edit">Edit Teacher</string>
    <string name="btn_admin_teachers_add">Add Teacher</string>

    <!--activity_admin_add_teachers-->
    <string name="title_add_teachers">Add Teachers</string>
    <string name="btn_add_teachers_picture">Picture</string>
    <string name="btn_add_teachers_save">Save</string>
    <string name="btn_add_teachers_back">Back</string>
    <string name="btn_add_teachers_hint_first">First</string>
    <string name="btn_add_teachers_hint_last">Last</string>
    <string name="btn_add_teachers_hint_email">jsmith@example.com</string>
    <string name="btn_add_teachers_hint_phone">8141231234</string>


    <!--activity_admin_edit_teachers-->
    <string name="title_edit_teachers">Edit Teachers</string>
    <string name="btn_edit_teachers_picture">Picture</string>
    <string name="btn_edit_teachers_save">Save</string>
    <string name="btn_edit_teachers_back">Back</string>
    <string name="btn_edit_teachers_hint_first">First</string>
    <string name="btn_edit_teachers_hint_last">Last</string>
    <string name="btn_edit_teachers_hint_email">jsmith@example.com</string>
    <string name="btn_edit_teachers_hint_phone">8141231234</string>


    <!--activity_admin_tasks-->
    <string name="title_admin_tasks">Tasks</string>
    <string name="search_hint_admin_type_task_name">Type Task Name</string>
    <string name="btn_admin_tasks_back">Back</string>
    <string name="btn_admin_tasks_add">Add Task</string>

    <!--activity_admin_add_tasks-->
    <string name="title_add_tasks">Add Task</string>
    <string name="btn_add_tasks_picture">Picture</string>
    <string name="btn_add_tasks_save">Save</string>
    <string name="btn_add_tasks_back">Back</string>


    <!--activity_admin_edit_tasks-->
    <string name="title_edit_tasks">Edit Task</string>
    <string name="btn_edit_tasks_picture">Picture</string>
    <string name="btn_edit_tasks_save">Save</string>
    <string name="btn_edit_tasks_back">Back</string>

    <string name="btnDelete">Delete</string>

    <string name="lblAddAccount">Add Account</string>
    <string name="lblEditAccount">Edit Account</string>
    <string name="lblUsername">Username</string>
    <string name="lblPassword">Password</string>
    <string name="lblConfirmPassword">Confirm Password</string>

    <!--activity_admin_student_punches-->
    <string name="title_punches">Punches</string>
    <string name="search_hint_admin_punches_student">Type Student Name</string>
    <string name="btn_admin_punch_back">Back</string>
    <string name="btn_admin_punch_add">Add Task</string>

    <!--activity_admin_student_punches_add/edit-->
    <string name="title_punches_add">Add Punch</string>
    <string name="title_punches_edit">Edit Punch</string>
    <string name="lbl_student">Student</string>
    <string name="lbl_task">Task</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_start">Start</string>
    <string name="lbl_end">End</string>
    <string name="lbl_duration">Duration</string>
    <string name="btn_add_time_Save">Save</string>

    <!--activity_admin_student_reports-->
    <string name="title_report">Report</string>
    <string name="lbl_start_date">Start Date</string>
    <string name="lbl_end_date">End Date</string>
    <string name="btn_report">Export</string>

    <!--activity_admin_punch_select-student-->
    <string name="title_admin_select_student">Select Student</string>
    <string name="search_hint_type_admin_student_name">Type Student Name</string>
    <string name="btn_select_admin_student_back">Back</string>

    <!--dialogue_date_picker-->
    <string name="dialogue_okay">Okay</string>
    <string name="dialogue_cancel">Cancel</string>
</resources>
