<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1F4FA"
    tools:context="com.boces.black_stanton_boces.AdminEditStudentActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/lblStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_edit_students"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputStudentFirstName"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/btn_edit_students_hint_first"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblStudents" />

    <EditText
        android:id="@+id/inputStudentLastName"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/btn_edit_students_hint_last"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@+id/inputStudentFirstName"
        app:layout_constraintTop_toBottomOf="@+id/inputStudentFirstName" />

    <EditText
        android:id="@+id/inputStudentAge"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/btn_edit_students_hint_age"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@+id/inputStudentLastName"
        app:layout_constraintTop_toBottomOf="@+id/inputStudentLastName" />

    <EditText
        android:id="@+id/inputStudentYear"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/btn_edit_students_hint_year"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/inputStudentAge"
        app:layout_constraintTop_toBottomOf="@+id/inputStudentLastName" />

    <Spinner
        android:id="@+id/spinnerTeacher"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        app:layout_constraintLeft_toLeftOf="@+id/inputStudentAge"
        app:layout_constraintTop_toBottomOf="@+id/inputStudentAge" />

    <Button
        android:id="@+id/btnBackStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onClickAdminStudentsEditBack"
        android:text="@string/btn_edit_students_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/btnSaveStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="onSave"
        android:text="@string/btn_edit_students_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBackStudents"
        android:layout_marginRight="8dp" />

    <ImageButton
        android:id="@+id/imgbtnAddStudent"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTeacher"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/btnDeleteStudent"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onDeleteStudent"
        android:text="@string/btnDelete"
        app:layout_constraintEnd_toStartOf="@+id/btnSaveStudent"
        app:layout_constraintStart_toEndOf="@+id/btnBackStudents"
        app:layout_constraintTop_toTopOf="@+id/btnBackStudents" />


</android.support.constraint.ConstraintLayout>

