<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1F4FA"
    tools:context="com.boces.black_stanton_boces.AdminAddTeacherActivity">

    <TextView
        android:id="@+id/lblTeachers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_add_teachers"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputTeacherFirstName"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/btn_add_teachers_hint_first"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTeachers" />

    <EditText
        android:id="@+id/inputTeacherLastName"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/btn_add_teachers_hint_last"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@+id/inputTeacherFirstName"
        app:layout_constraintTop_toBottomOf="@+id/inputTeacherFirstName" />

    <EditText
        android:id="@+id/inputTeacherEmail"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/btn_add_teachers_hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="@+id/inputTeacherLastName"
        app:layout_constraintTop_toBottomOf="@+id/inputTeacherLastName" />

    <EditText
        android:id="@+id/inputTeacherPhone"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/btn_add_teachers_hint_phone"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="@+id/inputTeacherEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputTeacherEmail" />

    <Button
        android:id="@+id/btnBackTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onClickAdminTeacherAddBack"
        android:text="@string/btn_add_teachers_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSaveTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:onClick="onClickAdminTeacherAddSave"
        android:text="@string/btn_add_teachers_save"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBackTeacher" />

    <ImageButton
        android:id="@+id/imgbtnAddTeacher"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTeacherPhone"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageView
        android:id="@+id/imgTeacher"
        android:layout_width="164dp"
        android:layout_height="148dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgbtnAddTeacher"
        app:srcCompat="@mipmap/ic_launcher" />

</android.support.constraint.ConstraintLayout>
