<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1F4FA"
    android:orientation="vertical"
    tools:context="com.boces.black_stanton_boces.AdminPunchSelectStudentActivity">

    <TextView
        android:id="@+id/admin_punch_select_student_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_select_student"
        android:textAlignment="center"
        android:textSize="30sp" />

    <SearchView
        android:id="@+id/admin_punch_select_student_search"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:visibility="visible"
        android:queryHint="@string/search_hint_admin_type_student_name"
        tools:queryHint="@string/search_hint_type_admin_student_name"
        android:layout_marginTop="8dp"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerSelectStudent"
        android:layout_width="match_parent"
        android:layout_height="374dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        tools:listitem="@layout/item_student" />

</LinearLayout>
