<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1F4FA"
    tools:context="com.boces.black_stanton_boces.AdminAddAccountActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblAddTask"
        android:text="@string/lblAddAccount"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"/>

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lblUsername"
        android:inputType="text"
        android:textSize="24sp"/>

    <Space
        android:layout_weight="2"
        android:layout_height="0dp"
        android:layout_width="match_parent"/>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textSize="24sp"/>

    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"/>

    <EditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lblConfirmPassword"
        android:inputType="textPassword"
        android:textSize="24sp"/>

    <Space
        android:layout_weight="50"
        android:layout_height="0dp"
        android:layout_width="match_parent"/>

    <Button
        android:layout_weight="2"
        android:text="@string/lblAddAccount"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_gravity="bottom"/>

</LinearLayout>
