<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.boces.black_stanton_boces.AdminEditAccountActivity">

    <TextView
        android:id="@+id/lblEditAccount"
        android:text="@string/lblEditAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold" />
    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"/>
    <EditText
        android:id="@+id/inputUsername"
        android:hint="@string/lblUsername"
        android:layout_weight="4"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"/>
    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"/>
    <EditText
        android:id="@+id/inputPassword"
        android:hint="@string/hint_password"
        android:layout_weight="4"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"/>
    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"/>
    <EditText
        android:id="@+id/inputConfirmPassword"
        android:hint="@string/lblConfirmPassword"
        android:layout_weight="4"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp" />
    <Space
        android:layout_weight="60"
        android:layout_height="0dp"
        android:layout_width="match_parent"/>
    <Button
        android:id="@+id/btnAddAccount"
        android:text="@string/lblEditAccount"
        android:layout_weight="1"
        android:onClick="onSave"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_gravity="bottom"/>

</LinearLayout>
