<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E1F4FA"
        tools:context="com.boces.black_stanton_boces.AdminLoginActivity"
        tools:layout_editor_absoluteY="81dp"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/lblAdminLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_admin_login"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputAdminUserName"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/hint_username"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/lblAdminLogin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/inputAdminPassword"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="@+id/inputAdminUserName"
            app:layout_constraintTop_toBottomOf="@+id/inputAdminUserName" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="260dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="16dp"
        android:onClick="onClickAdminLoginValidate"
        android:text="@string/btn_admin_login"
        app:layout_constraintLeft_toLeftOf="@+id/inputAdminUserName"
        app:layout_constraintTop_toBottomOf="@+id/inputAdminPassword" />

    </android.support.constraint.ConstraintLayout>

