<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1F4FA"
    android:orientation="vertical"
    tools:context="com.boces.black_stanton_boces.AdminAddTaskActivity">

    <TextView
        android:id="@+id/lblTasks"
        android:text="@string/title_add_tasks"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/inputTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint_type_task_name"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/imgTask"
        android:layout_width="232dp"
        android:layout_height="236dp"
        android:layout_marginTop="8dp"
        android:onClick="onCamera"
        app:srcCompat="@mipmap/ic_launcher" />
    <Button
        android:id="@+id/btnSaveTask"
        android:onClick="onClickAdminTaskAddSave"
        android:text="@string/btn_add_tasks_save"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_gravity="bottom"/>
</LinearLayout>